--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,10 @@ buildscript {
     }
 }
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+//apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
+
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -41,6 +43,17 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        preDexLibraries = false
+        javaMaxHeapSize "4g"
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -96,10 +109,13 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 //    implementation 'com.android.support:design:27.1.1'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+   /* implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
         transitive = true;
-    }
-    implementation('com.crashlytics.sdk.android:answers:1.4.2@aar') {
+    }*/
+
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
         transitive = true;
     }
     implementation 'com.google.android.gms:play-services-wallet:16.0.0'
